        occured multiple times per flush, also removing significant
        method call count from flush().
        
      - Other redundant behaviors have been simplified in 
        mapper._save_obj().
      
    - Modified query_cls on DynamicAttributeImpl to accept a full
      mixin version of the AppenderQuery, which allows subclassing
      the AppenderMixin.

    - Fixed the evaluator not being able to evaluate IS NULL clauses.

    - Fixed the "set collection" function on "dynamic" relations to
      initiate events correctly.  Previously a collection could only
      be assigned to a pending parent instance, otherwise modified
      events would not be fired correctly.  Set collection is now
      compatible with merge(), fixes [ticket:1352].
    
    - Allowed pickling of PropertyOption objects constructed with
      instrumented descriptors; previously, pickle errors would occur 
      when pickling an object which was loaded with a descriptor-based 
      option, such as query.options(eagerload(MyClass.foo)).
      
    - Lazy loader will not use get() if the "lazy load" SQL clause
      matches the clause used by get(), but contains some parameters
      hardcoded.  Previously the lazy strategy would fail with the
      get().  Ideally get() would be used with the hardcoded
      parameters but this would require further development.
      [ticket:1357]

    - MapperOptions and other state associated with query.options()
      is no longer bundled within callables associated with each 
      lazy/deferred-loading attribute during a load.
      The options are now associated with the instance's
      state object just once when it's populated.  This removes
      the need in most cases for per-instance/attribute loader 
      objects, improving load speed and memory overhead for
      individual instances. [ticket:1391]
      
    - Fixed another location where autoflush was interfering
      with session.merge().  autoflush is disabled completely